--- WICHTIG: mit Betaversion gemerged! --- Würfelfunktion - noch ohne Schüttelfunktion und Spielintegration man tippt Button an und es kommt eine Zahl

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="playerTwo">Player 2:</string>
     <string name="serverClose">Server schließen</string>
     <string name="disconnect">Disconnect</string>
+    <string name="roll">Würfle!</string>
 </resources>
