Einfügen einer Spielanleitung in den Startscreen. Bisher nur Probetext, leider überlappen sich noch die TextViews, behebe noch das Problem

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="serverClose">Server schließen</string>
     <string name="disconnect">Disconnect</string>
     <string name="roll">Würfle!</string>
+    <string name="anleitung">Spielanleitung</string>
 </resources>
